fixed sam's fuckups

--- a/TheList/static/index.html
+++ b/TheList/static/index.html
@@ -55,14 +55,12 @@
       </div>
     </div>
     <div class="navbar">
-      <form class="navbar-form navbar-left" action="../transactions/search"method="get" role="search" id="search-box">
         <div class="form-group" id="search-bar">
-          <input type="text" class="form-control" id="search-text" placeholder="Search">
-        </div>
+        <input type="text" class="form-control" id="search-text" placeholder="Search">
         <button onclick="searchTransactions()" class="btn btn-default" id="search-submit">Submit</button>
       </form>
     </div>
-<div class="navbar navbar-inverse">
+<div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -189,9 +187,9 @@
     </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
 
-        <script src="js/vendor/bootstrap.min.js"></script>
+        <script src="static/js/vendor/bootstrap.min.js"></script>
 
-        <script src="js/main.js"></script>
+        <script src="static/js/main.js"></script>
 
         <script>
             var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
