--- a/TheList/static/index.html
+++ b/TheList/static/index.html
@@ -41,8 +41,7 @@
         </div>
         <div class="navbar-collapse collapse">
           <form id="accountform" class="navbar-form navbar-right" type="submit" action="auth/login" method="get">
-            <button  type="submit" class="btn btn-default navbar-btn">Login</button>
-            <button type="submit" class="btn btn-default navbar-btn">Sign Up</button>
+            <button  type="submit" class="btn btn-default navbar-btn">Login/Sign Up</button>
           </form>
         </div><!--/.navbar-collapse -->
       </div>
