--- a/TheList/static/index.html
+++ b/TheList/static/index.html
@@ -37,7 +37,9 @@
             <h4 class="modal-title">Modal title</h4>
           </div>
           <div class="modal-body">
-            <p>One fine body&hellip;</p>
+            <ul id="transactionList">
+
+            </ul>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
