--- a/TheList/static/index.html
+++ b/TheList/static/index.html
@@ -10,17 +10,17 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
-        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="static/css/bootstrap.min.css">
         <style>
             body {
                 padding-top: 50px;
                 padding-bottom: 20px;
             }
         </style>
-        <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="static/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="static/css/main.css">
 
-        <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+        <script src="static/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -40,7 +40,7 @@
           </button>
         </div>
         <div class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right" type="submit" action="auth/login" method="get">
+          <form id="accountform" class="navbar-form navbar-right" type="submit" action="auth/login" method="get">
             <button  type="submit" class="btn btn-default navbar-btn">Login</button>
             <button type="submit" class="btn btn-default navbar-btn">Sign Up</button>
           </form>
@@ -57,9 +57,9 @@
     <div class="navbar">
       <form class="navbar-form navbar-left" action="../transactions/search"method="get" role="search" id="search-box">
         <div class="form-group" id="search-bar">
-          <input type="text" class="form-control" placeholder="Search">
+          <input type="text" class="form-control" id="search-text" placeholder="Search">
         </div>
-        <button type="submit" class="btn btn-default" id="search-submit">Submit</button>
+        <button onclick="searchTransactions()" class="btn btn-default" id="search-submit">Submit</button>
       </form>
     </div>
 <div class="navbar navbar-inverse">
