transaction modal started

--- a/TheList/static/index.html
+++ b/TheList/static/index.html
@@ -33,7 +33,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title" id="postModal">Post</h4>
+            <h4 class="modal-title">Post</h4>
           </div>
           <div class="modal-body">
             <h4>post form</h4>
@@ -47,6 +47,24 @@
       </div>
     </div>
 
+    <div class="modal fade" id="transactionModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title" id="transactionModalTitle">Transaction</h4>
+          </div>
+          <div class="modal-body" id="transactionModalBody">
+            <h4>transaction info</h4>
+            <p>Lorem ipsum dolor et su madre</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-defualt" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Submit</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div class="navbar navbar-fixed-top">
       <div class="container">
