post form fixed

--- a/TheList/static/index.html
+++ b/TheList/static/index.html
@@ -56,7 +56,18 @@
           </div>
           <div class="modal-body">
             <h4>post form</h4>
-            <p>Lorem ipsum dolor et su madre</p>
+            <table>
+              <tr>
+                 <td>Item:</td><td><input type="text" id="new-transaction-item" /></td>
+              </tr>
+              <tr>
+                 <td>Description:</td><td><input type="text" id="new-transaction-description" /></td>
+              </tr>
+              <tr>
+                 <td>Minimum Offer:</td><td><input type="text" id="new-transaction-offer" /></td>
+              </tr>
+            </table>
+            <input type="submit" value="Add Transaction" onclick='addTransaction()'/>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-defualt" data-dismiss="modal">Close</button>
