offer form part of transaction modal

--- a/TheList/static/index.html
+++ b/TheList/static/index.html
@@ -60,49 +60,8 @@
           </div>
           <div class="modal-body">
             <h4>post form</h4>
-            <table>
-              <tr>
-                 <td>Item:</td><td><input type="text" id="new-transaction-item" /></td>
-              </tr>
-              <tr>
-                 <td>Description:</td><td><input type="text" id="new-transaction-description" /></td>
-              </tr>
-              <tr>
-                 <td>Minimum Offer:</td><td><input type="text" id="new-transaction-offer" /></td>
-              </tr>
-            </table>
-            <input type="submit" value="Add Transaction" onclick='addTransaction()'/>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-defualt" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" onclick="addTransaction()">Submit</button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- ==============  MODAL FOR MAKING OFFERS ================ -->
-    <div class="modal fade" id="offerModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title">Make an Offer</h4>
-          </div>
-          <div class="modal-body">
-            <h4>Make an Offer</h4>
-            <table>
-              <tr>
-                 <td>Transaction ID: </td><td><input type="text" id="new-offer-transaction" /></td>
-              </tr>
-              <tr>
-                 <td>Enter an Offer:</td><td><input type="text" id="new-offer-amount" /></td>
-              </tr>
-            </table>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-defualt" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" onclick='addOffer()'>Submit Offer</button>
           </div>
         </div>
       </div>
@@ -115,13 +74,39 @@
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
             <h4 class="modal-title" id="transactionModalTitle">Transaction</h4>
           </div>
-          <div class="modal-body" id="transactionModalBody">
+          <div class="modal-body transition-all" id="transactionModalBody">
+
             <h4>transaction info</h4>
-            <p>Lorem ipsum dolor et su madre</p>
+
+            <table>
+              <tr>
+                 <td>Item:</td><td><input type="text" id="new-transaction-item" /></td>
+              </tr>
+              <tr>
+                 <td>Description:</td><td><input type="text" id="new-transaction-description" /></td>
+              </tr>
+              <tr>
+                 <td>Minimum Offer:</td><td><input type="text" id="new-transaction-offer" /></td>
+              </tr>
+            </table>
+
+            <div id="offerForm" class="hidden transition-all">
+              <h4>Make an Offer</h4>
+              <table>
+                <tr>
+                   <td>Transaction ID: </td><td><input type="text" id="new-offer-transaction" /></td>
+                </tr>
+                <tr>
+                   <td>Enter an Offer:</td><td><input type="text" id="new-offer-amount" /></td>
+                </tr>
+              </table>
+              <button type="button" class="btn btn-default" onclick="hideOfferForm()">Hide</button>
+            </div>
           </div>
           <div class="modal-footer">
+            <button type="button" class="btn btn-primary" onclick="showOfferForm()">Make An Offer</button>
             <button type="button" class="btn btn-defualt" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Submit</button>
+            <button type="button" class="btn btn-primary" onclick="addTransaction()">Submit</button>
           </div>
         </div>
       </div>
@@ -155,12 +140,6 @@
         <input type="text" class="form-control" id="search-text" placeholder="Search">
         <button onclick="searchTransactions()" class="btn btn-default" id="search-submit">Submit</button>
       </form>
-    </div>
-    <div>
-      <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#postModal">Post</button>
-    </div>
-    <div>
-      <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#offerModal">Offer</button>
     </div>
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
