update placeholder text

--- a/TheList/static/index.html
+++ b/TheList/static/index.html
@@ -40,8 +40,8 @@
           </div>
           <div class="modal-body">
             <div class="error"></div>
-            <input type='text' name='userName' value='Your Name' id='registerName'>
-            <input type='text' name='userCity' value='Your City' id='registerCity'>
+            <input type='text' name='userName' placeholder='Name' id='registerName'>
+            <input type='text' name='userCity' placeholder='City' id='registerCity'>
           </div>
           <div class="modal-footer">
             <!--<button type="button" class="btn btn-primary">Submit</button>-->
