--- a/TheList/static/index.html
+++ b/TheList/static/index.html
@@ -154,7 +154,7 @@
       </form>
     </div>
     <div>
-      <button class="btn btn-primary btn-lg" id="#postButton" data-toggle="modal" data-target="#postModal">Post</button>
+      <button class="btn btn-primary btn-lg" id="postButton" data-toggle="modal" data-target="#postModal">Post</button>
     </div>
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
