--- a/TheList/static/index.html
+++ b/TheList/static/index.html
@@ -51,13 +51,14 @@
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
 
-    <div class="modal fade" id="postModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="myOffersModal" tabindex="-1" role="dialog" aria-labelledby="myOffersModal" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
             <h4 class="modal-title">Post</h4>
-              <table>
+              <div class="container" id="myOffersResults"></div>
+              <!-- <table>
                 <tr>
                   <td>Item:</td><td><input type="text" id="new-transaction-item" /></td>
                 </tr>
@@ -67,7 +68,7 @@
                 <tr>
                   <td>Minimum Offer:</td><td><input type="text" id="new-transaction-offer" /></td>
                 </tr>
-              </table>
+              </table> -->
             <input type="submit" value="Add Transaction" onclick='addTransaction()'/>
           </div>
           <div class="modal-body">
