--- a/TheList/static/index.html
+++ b/TheList/static/index.html
@@ -51,23 +51,24 @@
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
 
-<div class="modal fade" id="myTransactionModal">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                <h4 class="modal-title" id="myTransactionModalTitle">Transaction</h4>
-              </div>
-              <div class="modal-body transition-all" id="myTransactionModalBody">
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-defualt" data-dismiss="modal">Close</button>
-              </div>
-            </div>
+    <div class="modal fade" id="myTransactionModal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h4 class="modal-title" id="myTransactionModalTitle">Transaction</h4>
+          </div>
+          <div class="modal-body transition-all" id="myTransactionModalBody">
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-defualt btn-primary" onclick="editMyTransaction()">Edit</button>
+            <button type="button" class="btn btn-defualt" data-dismiss="modal">Close</button>
           </div>
         </div>
+      </div>
+    </div>
 
-<div class="modal fade" id="postModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal fade" id="postModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
