--- a/TheList/static/index.html
+++ b/TheList/static/index.html
@@ -51,6 +51,28 @@
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
 
+<div class="modal fade" id="userProfileModal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h2 class="modal-title" id="userProfileName"></h2>
+          </div>
+          <div class="modal-body">
+            <div class="error"></div>
+            <h3 class="modal-title" id="userProfileEmail"></h3>
+             <h3 class="modal-title" id="userProfileCity"></h3>
+             <h4><div class="container" id="userProfileTransactions"></div></h4>
+
+          </div>
+          <div class="modal-footer">
+            <!--<button type="button" class="btn btn-primary">Submit</button>-->
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
+
     <div class="modal fade" id="myTransactionModal">
       <div class="modal-dialog">
         <div class="modal-content">
