--- a/TheList/static/index.html
+++ b/TheList/static/index.html
@@ -52,18 +52,34 @@
     </div><!-- /.modal -->
 
 <div class="modal fade" id="userProfileModal">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h2 class="modal-title" id="userProfileName"></h2>
+      </div>
+      <div class="modal-body">
+        <div class="error"></div>
+        <h3 class="modal-title" id="userProfileEmail"></h3>
+        <h3 class="modal-title" id="userProfileCity"></h3>
+        <h4><div class="container" id="userProfileTransactions"></div></h4>
+      </div>
+      <div class="modal-footer">
+            <!--<button type="button" class="btn btn-primary">Submit</button>-->
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+    <button class='invisible' id='rate-button' data-toggle="modal" data-target="#rate"></button>
+
+    <div class="modal fade" id="rate">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h2 class="modal-title" id="userProfileName"></h2>
+            <h4 class="modal-title">Review Users</h4>
           </div>
           <div class="modal-body">
-            <div class="error"></div>
-            <h3 class="modal-title" id="userProfileEmail"></h3>
-             <h3 class="modal-title" id="userProfileCity"></h3>
-             <h4><div class="container" id="userProfileTransactions"></div></h4>
-
           </div>
           <div class="modal-footer">
             <!--<button type="button" class="btn btn-primary">Submit</button>-->
@@ -85,6 +101,8 @@
           <div class="modal-footer">
             <button type="button" class="btn btn-defualt btn-primary" onclick="editMyTransaction()">Edit</button>
             <button type="button" class="btn btn-defualt" data-dismiss="modal">Close</button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
