--- a/TheList/static/index.html
+++ b/TheList/static/index.html
@@ -142,7 +142,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title">Post</h4>
+            <h4 class="modal-title">Sell Stuff!</h4>
               
             
           </div>
@@ -201,7 +201,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title" id="transactionModalTitle">Transaction</h4>
+            <h4 class="modal-title" id="transactionModalTitle">Make an Offer</h4>
           </div>
           <div class="modal-body transition-all" id="transactionModalBody">
 
@@ -209,9 +209,8 @@
 
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-primary" onclick="showOfferForm()">Make An Offer</button>
             <button type="button" class="btn btn-defualt" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary" onclick="addTransaction()">Submit</button>
+            <button type="button" id="offerButton" class="btn btn-primary">Place Offer</button>
           </div>
         </div>
       </div>
@@ -235,18 +234,17 @@
     </div>
     <div class="jumbotron">
       <div class="container">
-        <h1>The List</h1>
-        <p>The List catalogues goods and services offered by people near you, and handles payment for transactions.</p>
+        <p>A catalogue of goods and services offered by people near you.</p>
       </div>
     </div>
     <div class="navbar">
         <div class="form-group" id="search-bar">
         <input type="text" class="form-control" id="search-text" placeholder="Search">
-        <button onclick="searchTransactions()" class="btn btn-default" id="search-submit">Submit</button>
+        <button onclick="searchTransactions()" class="btn btn-default" id="search-submit">Find Stuff!</button>
       </form>
     </div>
     <div>
-      <button class="btn btn-primary btn-lg" id="postButton" data-toggle="modal" data-target="#postModal">Post</button>
+      <button class="btn btn-primary btn-lg" id="postButton" data-toggle="modal" data-target="#postModal">Sell Stuff!</button>
     </div>
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
@@ -260,7 +258,7 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#">About</a></li>
+            <li><a href="#" onclick="about();">About</a></li>
             <li><a href="#">Contact</a></li>
           </ul>
         </div><!--/.navbar-collapse -->
