--- a/TheList/static/index.html
+++ b/TheList/static/index.html
@@ -117,8 +117,11 @@
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
             <h4 class="modal-title" id="myTransactionModalTitle">Transaction</h4>
+            <input type="text" class="editTransaction hidden" id="newTransactionName" />
           </div>
           <div class="modal-body transition-all" id="myTransactionModalBody">
+            <input type="text" class="editTransaction hidden" id="newTransactionDescription" />
+            <input type="text" class="editTransaction hidden" id="newTransactionMinPrice" />
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-defualt btn-primary" onclick="editMyTransaction()">Edit</button>
