--- a/TheList/static/index.html
+++ b/TheList/static/index.html
@@ -73,25 +73,25 @@
       </div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
 
-<div class="modal fade" id="userProfileModal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h2 class="modal-title" id="userProfileName"></h2>
-      </div>
-      <div class="modal-body">
-        <div class="error"></div>
-        <h3 class="modal-title" id="userProfileEmail"></h3>
-        <h3 class="modal-title" id="userProfileCity"></h3>
-        <h4><div class="container" id="userProfileTransactions"></div></h4>
-      </div>
-      <div class="modal-footer">
-            <!--<button type="button" class="btn btn-primary">Submit</button>-->
-      </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+    <div class="modal fade" id="userProfileModal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+            <h2 class="modal-title" id="userProfileName"></h2>
+          </div>
+          <div class="modal-body">
+            <div class="error"></div>
+            <h3 class="modal-title" id="userProfileEmail"></h3>
+            <h3 class="modal-title" id="userProfileCity"></h3>
+            <h4><div class="container" id="userProfileTransactions"></div></h4>
+          </div>
+          <div class="modal-footer">
+                <!--<button type="button" class="btn btn-primary">Submit</button>-->
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 
     <button class='invisible' id='rate-button' data-toggle="modal" data-target="#rate"></button>
 
@@ -120,8 +120,11 @@
             <input type="text" class="editTransaction hidden" id="newTransactionName" />
           </div>
           <div class="modal-body transition-all" id="myTransactionModalBody">
+            <div class="myTransactionCurrent" id="myTransactionDescription"></div>
+            <div class="myTransactionCurrent" id="myTransactionMinPrice"></div>
             <input type="text" class="editTransaction hidden" id="newTransactionDescription" />
             <input type="text" class="editTransaction hidden" id="newTransactionMinPrice" />
+            <ul id="myTransactionOffers"></ul>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-defualt btn-primary" onclick="editMyTransaction()">Edit</button>
