--- a/TheList/static/index.html
+++ b/TheList/static/index.html
@@ -104,7 +104,7 @@
           <div class="modal-body">
           </div>
           <div class="modal-footer">
-            <!--<button type="button" class="btn btn-primary">Submit</button>-->
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
