--- a/TheList/static/index.html
+++ b/TheList/static/index.html
@@ -204,7 +204,7 @@
             <h4 class="modal-title" id="transactionModalTitle">Make an Offer</h4>
           </div>
           <div class="modal-body transition-all" id="transactionModalBody">
-
+            <a href="#" id="transactionModalBodyProfile"></a>
             <h4>transaction info</h4>
 
           </div>
