--- a/TheList/static/index.html
+++ b/TheList/static/index.html
@@ -125,6 +125,10 @@
             <div class="myTransactionCurrent" id="myTransactionMinPrice"></div>
             <input type="text" class="editTransaction hidden" id="newTransactionDescription" />
             <input type="text" class="editTransaction hidden" id="newTransactionMinPrice" />
+            <div id="myTransactionModalBodyContainer" class="container">
+              <div class="row">
+              </div>
+            </div>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-defualt btn-primary" onclick="editMyTransaction()">Edit</button>
