--- a/TheList/static/index.html
+++ b/TheList/static/index.html
@@ -236,6 +236,7 @@
     </div>
     <div class="jumbotron">
       <div class="container">
+        <h1>The List</h1>
         <p>A catalogue of goods and services offered by people near you.</p>
       </div>
     </div>
