--- a/TheList/static/index.html
+++ b/TheList/static/index.html
@@ -118,7 +118,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-            <h4 class="modal-title" id="myTransactionModalTitle">Transactions</h4>
+            <h4 class="modal-title" id="myTransactionModalTitle">My Transactions</h4>
           </div>
           <div class="modal-body transition-all" id="myTransactionModalBody">
             <div class="myTransactionCurrent" id="myTransactionDescription"></div>
